# tcp

./: .gitignore  mix.exs
config/: config.exs
cpp/: .gitignore  CMakeLists.txt
cpp/3rd/: CMakeLists.txt
cpp/3rd/include/: lua.h  luaconf.h  luasocket.h
cpp/3rd/include/LuaIntf/: luacompat.h
cpp/3rd/include/thrift/: stdcxx.h
cpp/3rd/include/thrift/transport/: TBufferTransports.h
cpp/3rd/include/upb/: upb.h
cpp/3rd/src/LuaIntf/: CMakeLists.txt
cpp/3rd/src/LuaJIT/: CMakeLists.txt
cpp/3rd/src/LuaJIT/src/: lj_bcdump.h
cpp/3rd/src/gtest/: CMakeLists.txt
cpp/3rd/src/lua/: CMakeLists.txt  luaconf.h  lualib.h  pb.c  pb.coo  pb.cpp  pbc.cxx
cpp/3rd/src/luapb/: CMakeLists.txt  LuaPB.cc  LuaPB.h  Proto.cc  Proto.h
cpp/3rd/src/luasocket/: CMakeLists.txt  inet.cpp  luabpack.cpp  luasocket.cpp  luasocket.h  mime.h  tcp.cpp  timeout.cpp  udp.cpp  unix.cpp
cpp/3rd/src/pbc/: CMakeLists.txt  pbc-lua.c
cpp/3rd/src/protobuf/: CMakeLists.txt
cpp/3rd/src/thrift/: CMakeLists.txt
cpp/3rd/src/tpl/: CMakeLists.txt  tpl.cpp  tpl.h
cpp/3rd/src/upb/: CMakeLists.txt  descriptor.upb.c  refcounted.c
cpp/3rd/src/zlib/: CMakeLists.txt
cpp/Base/: CMakeLists.txt  GameClient.cpp  GameClient.h  GeneralClient.cpp  GeneralClient.h  GeneralServer.cpp  GeneralServer.h  network.cpp  network.h
cpp/Demo/: CMakeLists.txt  Demo_ttypes.lua  TcpClient.cpp  TcpServer.cpp  TestLua.cpp  a  addressbook.pb.cc  addressbook.pb.h  addressbook_pb.lua  b  cepl  cepl_zip  demo_types.h  i2  i4  i8  jj  k0  k2  main.lua  protobuf.lua  t.lua  t3  talker.lua  test.lua  test2.lua  test3.lua  test_luapb.lua  test_pbc.lua  test_socket.lua  timestamp_pb.lua  w2  w22  x  xs.cpp  xx  z0  z1
cpp/Demo/pb/: protobuf.lua
go/: build.bat
go/cmd/gate/: gate.cfg  gate.go  proto.go
go/tests/client/: tcp_client.go
go/tests/proto/: proto.go
go/tests/server/: tcp_server.go
lib/: client.ex  protocol_handler.ex  server.ex  tcp.ex
protocol/: .gitignore  gen.bat  gen_lua.bat
protocol/proto/: Protos.proto  addressbook.proto
protocol/thrift/: demo.thrift  gen.bat  shared.thrift  tutorial.thrift
protocol/thrift/gen-cpp/: Server.cpp  Server.h  Server_server.skeleton.cpp  demo_constants.cpp  demo_constants.h  demo_types.cpp  shared_constants.cpp  shared_constants.h  shared_types.cpp  shared_types.h  tutorial_constants.cpp  tutorial_types.cpp  tutorial_types.h
protocol/thrift/gen-lua/: Demo_Server.lua  shared_ttypes.lua  tutorial_constants.lua  tutorial_ttypes.lua
protocol/thrift/gen-php/Demo/: Server.php  Types.php
protocol/thrift/gen-php/shared/: Types.php
protocol/thrift/gen-php/tutorial/: Types.php
rust/: Cargo.toml
rust/src/: main.rs
test/: tcp_test.exs
